(rule
  (targets prim.ml)
  (action
    (run ./configure)))

(library
  (public_name obytelib)
  (modules astack bytefile cmofile code config crcs data dbug dlls dlpt extra index instr interp normalised_code normalised_instr normalised_interp prim section strsec ident symb tools tree value version))
